crates/llvmkit-ir/tests/compile_fail/indirectbr_non_pointer_address.stderr
error[E0277]: the trait bound `IntValue<'_, i32, Brand<'_>>: IntoPointerValue<'_, Brand<'_>>` is not satisfied
  --> tests/compile_fail/indirectbr_non_pointer_address.rs:37:36
   |
37 |         let _ = b.build_indirectbr(addr, "");
   |                   ---------------- ^^^^ the trait `IntoPointerValue<'_, Brand<'_>>` is not implemented for `IntValue<'_, i32, Brand<'_>>`
   |                   |
   |                   required by a bound introduced by this call
   |
help: the following other types implement trait `IntoPointerValue<'ctx, B>`
  --> src/value.rs
   |
   |   impl<'ctx, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B> for PointerValue<'ctx, B> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `PointerValue<'ctx, B>`
...
   |   impl<'ctx, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B> for ConstantPointerNull<'ctx, B> {
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `ConstantPointerNull<'ctx, B>`
   |
  ::: src/typed_pointer_value.rs
   |
   | / impl<'ctx, T: IrField, B: ModuleBrand + 'ctx> IntoPointerValue<'ctx, B>
   | |     for TypedPointerValue<'ctx, T, B>
   | |_____________________________________^ `TypedPointerValue<'ctx, T, B>`
note: required by a bound in `IRBuilder::<'m, 'ctx, B, F, Positioned, R>::build_indirectbr`
  --> src/ir_builder.rs
   |
   |     pub fn build_indirectbr<A, Name>(
   |            ---------------- required by a bound in this associated function
...
   |         A: IntoPointerValue<'ctx, B>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `IRBuilder::<'m, 'ctx, B, F, Positioned, R>::build_indirectbr`
